references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/UsageDefinition_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:e99f66cea4fbc9db61b64769150aab4a42b327825c50bf65ce8d645c312c6f87
size 2373
